Work in progress

--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "50e10c6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
-    "algos = []\n",
+    "algos = ['betweenness', 'eigen']\n",
     "no_of_algo=3\n",
     "show_algo_comparsion=True\n",
     "show_dataset_comparsion=False\n",
@@ -46,10 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "02951b07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [22], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Interactive Widget component(s)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m w_dataset \u001b[38;5;241m=\u001b[39m Dropdown(options\u001b[38;5;241m=\u001b[39mdata_files, value\u001b[38;5;241m=\u001b[39mdata_files[\u001b[38;5;241m0\u001b[39m], description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDataset \u001b[39m\u001b[38;5;124m'\u001b[39m, disabled\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m----> 4\u001b[0m w_algo_list \u001b[38;5;241m=\u001b[39m Dropdown(options\u001b[38;5;241m=\u001b[39malgos, value\u001b[38;5;241m=\u001b[39malgos[\u001b[38;5;241m0\u001b[39m], description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAlgorihtm \u001b[39m\u001b[38;5;124m'\u001b[39m, disabled\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# w_algo = BoundedIntText(value=no_of_algo, description='Total algo ', min=1, max=5, step=1, disabled=False)\u001b[39;00m\n\u001b[1;32m      7\u001b[0m w_show_algo_comparsion \u001b[38;5;241m=\u001b[39m Checkbox(value\u001b[38;5;241m=\u001b[39mshow_algo_comparsion, description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mShow Algo. Comparsion\u001b[39m\u001b[38;5;124m'\u001b[39m, disabled\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "# Interactive Widget component(s)\n",
     "\n",
