--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "50e10c6d",
    "metadata": {},
    "outputs": [],
@@ -46,22 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "02951b07",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [22], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Interactive Widget component(s)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m w_dataset \u001b[38;5;241m=\u001b[39m Dropdown(options\u001b[38;5;241m=\u001b[39mdata_files, value\u001b[38;5;241m=\u001b[39mdata_files[\u001b[38;5;241m0\u001b[39m], description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDataset \u001b[39m\u001b[38;5;124m'\u001b[39m, disabled\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m----> 4\u001b[0m w_algo_list \u001b[38;5;241m=\u001b[39m Dropdown(options\u001b[38;5;241m=\u001b[39malgos, value\u001b[38;5;241m=\u001b[39malgos[\u001b[38;5;241m0\u001b[39m], description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAlgorihtm \u001b[39m\u001b[38;5;124m'\u001b[39m, disabled\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# w_algo = BoundedIntText(value=no_of_algo, description='Total algo ', min=1, max=5, step=1, disabled=False)\u001b[39;00m\n\u001b[1;32m      7\u001b[0m w_show_algo_comparsion \u001b[38;5;241m=\u001b[39m Checkbox(value\u001b[38;5;241m=\u001b[39mshow_algo_comparsion, description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mShow Algo. Comparsion\u001b[39m\u001b[38;5;124m'\u001b[39m, disabled\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Interactive Widget component(s)\n",
     "\n",
@@ -94,34 +82,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "e7f4c1bf-19c9-48a7-8dc5-af5cdb1833f6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# List of all component(s) that needs to be displayed\n",
     "\n",
-    "meta_data = [ w_workspace_path, w_responses, w_total_dates, w_rename_columns, w_show_intra_day, w_show_term_behavior_plot, w_show_logs, w_show_profile_report, w_show_settings ]"
+    "meta_data = [ w_dataset, w_algo_list, w_show_algo_comparsion, w_show_dataset_comparsion, w_show_verbose ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "9c45346c-d23e-41aa-8377-e87c2c593495",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8004ab1e36e54035bd0e2eb4d199d6c3",
+       "model_id": "bfb539bde04441d191f1d38adc583317",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridBox(children=(Text(value='20210711_160044_0x32eb876b82af807e', description='Workspace ', placeholder='Ente…"
+       "GridBox(children=(Dropdown(description='Dataset ', options=('DM-HT.txt', 'CE-HT.txt'), value='DM-HT.txt'), Dro…"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
