--- a/src/lab1/src/notebooks/graph_lab_220923.ipynb
+++ b/src/lab1/src/notebooks/graph_lab_220923.ipynb
@@ -168,6 +168,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "c95aad9f-4cee-4a9a-bf0b-575bb08ee41c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NetworkXException",
+     "evalue": "G is not planar.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNetworkXException\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pos\u001b[38;5;241m=\u001b[39mnx\u001b[38;5;241m.\u001b[39mplanar_layout(graph_fly)\n\u001b[1;32m      2\u001b[0m nx\u001b[38;5;241m.\u001b[39mdraw(graph_fly)\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/drawing/layout.py:940\u001b[0m, in \u001b[0;36mplanar_layout\u001b[0;34m(G, scale, center, dim)\u001b[0m\n\u001b[1;32m    938\u001b[0m     is_planar, embedding \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mcheck_planarity(G)\n\u001b[1;32m    939\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_planar:\n\u001b[0;32m--> 940\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m nx\u001b[38;5;241m.\u001b[39mNetworkXException(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mG is not planar.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    941\u001b[0m pos \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mcombinatorial_embedding_to_pos(embedding)\n\u001b[1;32m    942\u001b[0m node_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(embedding)\n",
+      "\u001b[0;31mNetworkXException\u001b[0m: G is not planar."
+     ]
+    }
+   ],
+   "source": [
+    "pos=nx.planar_layout(graph_fly)\n",
+    "nx.draw(graph_fly)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "d425006c-de83-442e-b351-1d415c81f9ed",
    "metadata": {},
