Work in progress

--- a/src/lab1/src/notebooks/graph_lab_220923.ipynb
+++ b/src/lab1/src/notebooks/graph_lab_220923.ipynb
@@ -168,6 +168,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "b1e6d703-b606-425f-a2cb-a9f2262a7fac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Graph.number_of_nodes of <networkx.classes.digraph.DiGraph object at 0x7f89f95caad0>>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(graph_fly.number_of_nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "c95aad9f-4cee-4a9a-bf0b-575bb08ee41c",
    "metadata": {},
