--- a/src/lab1/src/notebooks/graph_lab_220923.ipynb
+++ b/src/lab1/src/notebooks/graph_lab_220923.ipynb
@@ -168,23 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "b1e6d703-b606-425f-a2cb-a9f2262a7fac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Graph.number_of_nodes of <networkx.classes.digraph.DiGraph object at 0x7f89f95caad0>>"
+       "4660"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(graph_fly.number_of_nodes)"
+    "graph_fly.size()"
    ]
   },
   {
