--- a/src/lab1/src/notebooks/graph_lab_220923.ipynb
+++ b/src/lab1/src/notebooks/graph_lab_220923.ipynb
@@ -150,32 +150,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9c4645e7-de80-4347-94e6-62f138e63ec1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Failed to convert edge data (['2.0535098696773']) to dictionary.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/readwrite/edgelist.py:274\u001b[0m, in \u001b[0;36mparse_edgelist\u001b[0;34m(lines, comments, delimiter, create_using, nodetype, data)\u001b[0m\n\u001b[1;32m    273\u001b[0m         edgedata_str \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(d)\n\u001b[0;32m--> 274\u001b[0m     edgedata \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mliteral_eval\u001b[49m\u001b[43m(\u001b[49m\u001b[43medgedata_str\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'float' object is not iterable",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nx\u001b[38;5;241m.\u001b[39mread_edgelist(join(data_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDM-HT.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/utils/decorators.py:845\u001b[0m, in \u001b[0;36margmap.__call__.<locals>.func\u001b[0;34m(_argmap__wrapper, *args, **kwargs)\u001b[0m\n\u001b[1;32m    844\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfunc\u001b[39m(\u001b[38;5;241m*\u001b[39margs, __wrapper\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m--> 845\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43margmap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_lazy_compile\u001b[49m\u001b[43m(\u001b[49m\u001b[43m__wrapper\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 13:5\u001b[0m, in \u001b[0;36margmap_read_edgelist_9\u001b[0;34m(path, comments, delimiter, create_using, nodetype, data, edgetype, encoding)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgzip\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01minspect\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m defaultdict\n",
-      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/readwrite/edgelist.py:376\u001b[0m, in \u001b[0;36mread_edgelist\u001b[0;34m(path, comments, delimiter, create_using, nodetype, data, edgetype, encoding)\u001b[0m\n\u001b[1;32m    310\u001b[0m \u001b[38;5;124;03m\"\"\"Read a graph from a list of edges.\u001b[39;00m\n\u001b[1;32m    311\u001b[0m \n\u001b[1;32m    312\u001b[0m \u001b[38;5;124;03mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    373\u001b[0m \u001b[38;5;124;03mtypes (e.g. int, float, str, frozenset - or tuples of those, etc.)\u001b[39;00m\n\u001b[1;32m    374\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    375\u001b[0m lines \u001b[38;5;241m=\u001b[39m (line \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(line, \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m line\u001b[38;5;241m.\u001b[39mdecode(encoding) \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m path)\n\u001b[0;32m--> 376\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mparse_edgelist\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    377\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlines\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    378\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcomments\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcomments\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    379\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdelimiter\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdelimiter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    380\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_using\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcreate_using\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    381\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnodetype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnodetype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    382\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    383\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/readwrite/edgelist.py:276\u001b[0m, in \u001b[0;36mparse_edgelist\u001b[0;34m(lines, comments, delimiter, create_using, nodetype, data)\u001b[0m\n\u001b[1;32m    274\u001b[0m         edgedata \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(literal_eval(edgedata_str\u001b[38;5;241m.\u001b[39mstrip()))\n\u001b[1;32m    275\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m--> 276\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to convert edge data (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00md\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) to dictionary.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    280\u001b[0m     \u001b[38;5;66;03m# convert edge data to dictionary with specified keys and type\u001b[39;00m\n\u001b[1;32m    281\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(d) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(data):\n",
-      "\u001b[0;31mTypeError\u001b[0m: Failed to convert edge data (['2.0535098696773']) to dictionary."
-     ]
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m\n",
+       "\u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_edgelist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mcomments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'#'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mcreate_using\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mnodetype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0medgetype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Read a graph from a list of edges.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "path : file or string\n",
+       "   File or filename to read. If a file is provided, it must be\n",
+       "   opened in 'rb' mode.\n",
+       "   Filenames ending in .gz or .bz2 will be uncompressed.\n",
+       "comments : string, optional\n",
+       "   The character used to indicate the start of a comment. To specify that\n",
+       "   no character should be treated as a comment, use ``comments=None``.\n",
+       "delimiter : string, optional\n",
+       "   The string used to separate values.  The default is whitespace.\n",
+       "create_using : NetworkX graph constructor, optional (default=nx.Graph)\n",
+       "   Graph type to create. If graph instance, then cleared before populated.\n",
+       "nodetype : int, float, str, Python type, optional\n",
+       "   Convert node data from strings to specified type\n",
+       "data : bool or list of (label,type) tuples\n",
+       "   Tuples specifying dictionary key names and types for edge data\n",
+       "edgetype : int, float, str, Python type, optional OBSOLETE\n",
+       "   Convert edge data from strings to specified type and use as 'weight'\n",
+       "encoding: string, optional\n",
+       "   Specify which encoding to use when reading file.\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "G : graph\n",
+       "   A networkx Graph or other type specified with create_using\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       ">>> nx.write_edgelist(nx.path_graph(4), \"test.edgelist\")\n",
+       ">>> G = nx.read_edgelist(\"test.edgelist\")\n",
+       "\n",
+       ">>> fh = open(\"test.edgelist\", \"rb\")\n",
+       ">>> G = nx.read_edgelist(fh)\n",
+       ">>> fh.close()\n",
+       "\n",
+       ">>> G = nx.read_edgelist(\"test.edgelist\", nodetype=int)\n",
+       ">>> G = nx.read_edgelist(\"test.edgelist\", create_using=nx.DiGraph)\n",
+       "\n",
+       "Edgelist with data in a list:\n",
+       "\n",
+       ">>> textline = \"1 2 3\"\n",
+       ">>> fh = open(\"test.edgelist\", \"w\")\n",
+       ">>> d = fh.write(textline)\n",
+       ">>> fh.close()\n",
+       ">>> G = nx.read_edgelist(\"test.edgelist\", nodetype=int, data=((\"weight\", float),))\n",
+       ">>> list(G)\n",
+       "[1, 2]\n",
+       ">>> list(G.edges(data=True))\n",
+       "[(1, 2, {'weight': 3.0})]\n",
+       "\n",
+       "See parse_edgelist() for more examples of formatting.\n",
+       "\n",
+       "See Also\n",
+       "--------\n",
+       "parse_edgelist\n",
+       "write_edgelist\n",
+       "\n",
+       "Notes\n",
+       "-----\n",
+       "Since nodes must be hashable, the function nodetype must return hashable\n",
+       "types (e.g. int, float, str, frozenset - or tuples of those, etc.)\n",
+       "\u001b[0;31mFile:\u001b[0m      /opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/readwrite/edgelist.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "nx.read_edgelist(join(data_dir, \"DM-HT.txt\"))"
+    "nx.read_edgelist?\n",
+    "# (join(data_dir, \"DM-HT.txt\"))"
    ]
   },
   {
