Work in progress

--- a/src/lab1/src/notebooks/graph_lab_220923.ipynb
+++ b/src/lab1/src/notebooks/graph_lab_220923.ipynb
@@ -150,100 +150,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "9c4645e7-de80-4347-94e6-62f138e63ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6296065e-4175-43c5-8d35-e57335e38039",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m\n",
-       "\u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_edgelist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mcomments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'#'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mcreate_using\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mnodetype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0medgetype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Read a graph from a list of edges.\n",
-       "\n",
-       "Parameters\n",
-       "----------\n",
-       "path : file or string\n",
-       "   File or filename to read. If a file is provided, it must be\n",
-       "   opened in 'rb' mode.\n",
-       "   Filenames ending in .gz or .bz2 will be uncompressed.\n",
-       "comments : string, optional\n",
-       "   The character used to indicate the start of a comment. To specify that\n",
-       "   no character should be treated as a comment, use ``comments=None``.\n",
-       "delimiter : string, optional\n",
-       "   The string used to separate values.  The default is whitespace.\n",
-       "create_using : NetworkX graph constructor, optional (default=nx.Graph)\n",
-       "   Graph type to create. If graph instance, then cleared before populated.\n",
-       "nodetype : int, float, str, Python type, optional\n",
-       "   Convert node data from strings to specified type\n",
-       "data : bool or list of (label,type) tuples\n",
-       "   Tuples specifying dictionary key names and types for edge data\n",
-       "edgetype : int, float, str, Python type, optional OBSOLETE\n",
-       "   Convert edge data from strings to specified type and use as 'weight'\n",
-       "encoding: string, optional\n",
-       "   Specify which encoding to use when reading file.\n",
-       "\n",
-       "Returns\n",
-       "-------\n",
-       "G : graph\n",
-       "   A networkx Graph or other type specified with create_using\n",
-       "\n",
-       "Examples\n",
-       "--------\n",
-       ">>> nx.write_edgelist(nx.path_graph(4), \"test.edgelist\")\n",
-       ">>> G = nx.read_edgelist(\"test.edgelist\")\n",
-       "\n",
-       ">>> fh = open(\"test.edgelist\", \"rb\")\n",
-       ">>> G = nx.read_edgelist(fh)\n",
-       ">>> fh.close()\n",
-       "\n",
-       ">>> G = nx.read_edgelist(\"test.edgelist\", nodetype=int)\n",
-       ">>> G = nx.read_edgelist(\"test.edgelist\", create_using=nx.DiGraph)\n",
-       "\n",
-       "Edgelist with data in a list:\n",
-       "\n",
-       ">>> textline = \"1 2 3\"\n",
-       ">>> fh = open(\"test.edgelist\", \"w\")\n",
-       ">>> d = fh.write(textline)\n",
-       ">>> fh.close()\n",
-       ">>> G = nx.read_edgelist(\"test.edgelist\", nodetype=int, data=((\"weight\", float),))\n",
-       ">>> list(G)\n",
-       "[1, 2]\n",
-       ">>> list(G.edges(data=True))\n",
-       "[(1, 2, {'weight': 3.0})]\n",
-       "\n",
-       "See parse_edgelist() for more examples of formatting.\n",
-       "\n",
-       "See Also\n",
-       "--------\n",
-       "parse_edgelist\n",
-       "write_edgelist\n",
-       "\n",
-       "Notes\n",
-       "-----\n",
-       "Since nodes must be hashable, the function nodetype must return hashable\n",
-       "types (e.g. int, float, str, frozenset - or tuples of those, etc.)\n",
-       "\u001b[0;31mFile:\u001b[0m      /opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/readwrite/edgelist.py\n",
-       "\u001b[0;31mType:\u001b[0m      function\n"
+       "4660"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4660"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2989"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.read_edgelist?\n",
-    "# (join(data_dir, \"DM-HT.txt\"))"
+    "graph.size()\n",
+    "graph.number_of_edges()\n",
+    "graph.number_of_nodes()"
    ]
   },
   {
