--- a/src/lab1/src/notebooks/graph_lab_220923.ipynb
+++ b/src/lab1/src/notebooks/graph_lab_220923.ipynb
@@ -50,173 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3696b752-a9e0-4052-9c9b-73a6382f5701",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import the data\n",
-    "#data source: https://www.inetbio.org/wormnet/downloadnetwork.php\n",
-    "file_fly = pd.read_csv(join(data_dir, \"DM-HT.txt\"), sep=\"\\t\",header=None)\n",
-    "file_sworm = pd.read_csv(join(data_dir, \"CE-HT.txt\"), sep=\"\\t\",header=None)\n",
-    "file_fly_sampleDraw=file_fly.head(5)\n",
-    "file_sworm_sampleDraw=file_sworm.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "27ad5f24-c967-41a3-9311-0a48b913a2a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4R79.2</td>\n",
-       "      <td>F33A8.4</td>\n",
-       "      <td>2.053510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4R79.2</td>\n",
-       "      <td>K08E4.1</td>\n",
-       "      <td>1.718166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4R79.2</td>\n",
-       "      <td>Y37E3.9</td>\n",
-       "      <td>2.053510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4R79.2</td>\n",
-       "      <td>Y59A8B.1</td>\n",
-       "      <td>2.038247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AC3.2</td>\n",
-       "      <td>C55A6.10</td>\n",
-       "      <td>1.453145</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        0         1         2\n",
-       "0  4R79.2   F33A8.4  2.053510\n",
-       "1  4R79.2   K08E4.1  1.718166\n",
-       "2  4R79.2   Y37E3.9  2.053510\n",
-       "3  4R79.2  Y59A8B.1  2.038247\n",
-       "4   AC3.2  C55A6.10  1.453145"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file_fly_sampleDraw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "9c4645e7-de80-4347-94e6-62f138e63ec1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "6296065e-4175-43c5-8d35-e57335e38039",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4660"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4660"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2989"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "graph.size()\n",
-    "graph.number_of_edges()\n",
-    "graph.number_of_nodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "17e8a564-f629-484d-9d76-b7eb9920f2f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#add data into directed graphs with weights\n",
-    "for row in file_fly.iterrows():\n",
-    "    graph_fly.add_edge(row[1][0],row[1][1],weight=row[1][2])\n",
-    "for row in file_sworm.iterrows():\n",
-    "    graph_sworm.add_edge(row[1][0],row[1][1],weight=row[1][2])\n",
-    "for row in file_fly_sampleDraw.iterrows():\n",
-    "    graph_fly_sampleDraw.add_edge(row[1][0],row[1][1],weight=round(float(row[1][2]),2))\n",
-    "for row in file_sworm_sampleDraw.iterrows():\n",
-    "    graph_sworm_sampleDraw.add_edge(row[1][0],row[1][1],weight=row[1][2])"
+    "graph_fly = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "graph_sworm = nx.read_edgelist(join(data_dir, \"CE-HT.txt\"), nodetype=str, data=((\"weight\", float),))"
    ]
   },
   {
