--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "942890ed",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "50e10c6d",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "02951b07",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "4c85a758",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "e7f4c1bf-19c9-48a7-8dc5-af5cdb1833f6",
    "metadata": {},
    "outputs": [],
@@ -94,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "9c45346c-d23e-41aa-8377-e87c2c593495",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfb539bde04441d191f1d38adc583317",
+       "model_id": "89f97f722f05490cb8b1ab67e9f44882",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +109,7 @@
        "GridBox(children=(Dropdown(description='Dataset ', options=('DM-HT.txt', 'CE-HT.txt'), value='DM-HT.txt'), Dro…"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,34 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9116f3f9",
+   "execution_count": 18,
+   "id": "abebc5a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a2a57d08b514e81bade4abca4dd73e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "GridBox(children=(Text(value='20210711_160044_0x32eb876b82af807e', description='Workspace ', placeholder='Ente…"
+       "[Dropdown(description='Dataset ', options=('DM-HT.txt', 'CE-HT.txt'), value='DM-HT.txt'),\n",
+       " Dropdown(description='Algorihtm ', options=('betweenness', 'eigen'), value='betweenness'),\n",
+       " Checkbox(value=True, description='Show Algo. Comparsion'),\n",
+       " Checkbox(value=False, description='Show Dataset Comparsion'),\n",
+       " Checkbox(value=False, description='Show Verbose')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grid_box"
+    "for"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abebc5a5",
+   "id": "1a11c4aa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -155,9 +154,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py MGMA",
+   "display_name": "Python 3.10.4 ('mgma')",
    "language": "python",
-   "name": "mgma"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
