--- a/src/lab1/src/notebooks/networkx_example.ipynb
+++ b/src/lab1/src/notebooks/networkx_example.ipynb
@@ -490,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('mgma')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
