--- a/src/lab1/src/notebooks/widgets_example.ipynb
+++ b/src/lab1/src/notebooks/widgets_example.ipynb
@@ -167,9 +167,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py MGMA",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mgma"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
