--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -7,10 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
     "from os import makedirs, listdir, pardir, getcwd\n",
@@ -1383,9 +1383,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py MGMA",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mgma"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
