Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -223,9 +223,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py MGMA",
+   "display_name": "Python 3.10.4 ('mgma')",
    "language": "python",
-   "name": "mgma"
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
