--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -35,22 +35,7 @@
    "execution_count": 3,
    "id": "9c4645e7-de80-4347-94e6-62f138e63ec1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab/data/DM-HT.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m graph_fly \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mread_edgelist(join(data_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDM-HT.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m), nodetype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mstr\u001b[39m, data\u001b[38;5;241m=\u001b[39m((\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mfloat\u001b[39m),))\n",
-      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/utils/decorators.py:845\u001b[0m, in \u001b[0;36margmap.__call__.<locals>.func\u001b[0;34m(_argmap__wrapper, *args, **kwargs)\u001b[0m\n\u001b[1;32m    844\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfunc\u001b[39m(\u001b[39m*\u001b[39margs, __wrapper\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> 845\u001b[0m     \u001b[39mreturn\u001b[39;00m argmap\u001b[39m.\u001b[39;49m_lazy_compile(__wrapper)(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 5:3\u001b[0m, in \u001b[0;36margmap_read_edgelist_1\u001b[0;34m(path, comments, delimiter, create_using, nodetype, data, edgetype, encoding)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mbz2\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcollections\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgzip\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39minspect\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/utils/decorators.py:191\u001b[0m, in \u001b[0;36mopen_file.<locals>._open_file\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m    187\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    188\u001b[0m     \u001b[39m# could be None, or a file handle, in which case the algorithm will deal with it\u001b[39;00m\n\u001b[1;32m    189\u001b[0m     \u001b[39mreturn\u001b[39;00m path, \u001b[39mlambda\u001b[39;00m: \u001b[39mNone\u001b[39;00m\n\u001b[0;32m--> 191\u001b[0m fobj \u001b[39m=\u001b[39m _dispatch_dict[ext](path, mode\u001b[39m=\u001b[39;49mmode)\n\u001b[1;32m    192\u001b[0m \u001b[39mreturn\u001b[39;00m fobj, \u001b[39mlambda\u001b[39;00m: fobj\u001b[39m.\u001b[39mclose()\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab/data/DM-HT.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "graph_fly = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "# graph_sworm = nx.read_edgelist(join(data_dir, \"CE-HT.txt\"), nodetype=str, data=((\"weight\", float),))"
@@ -58,13 +43,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2565a525-ac6e-4c35-9f0a-48e4d107faea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2989"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4660"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "graph_fly.number_of_nodes()\n",
     "graph_fly.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3e57346c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m   \u001b[0mgraph_fly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mType:\u001b[0m        NodeView\n",
+      "\u001b[0;31mString form:\u001b[0m ['4R79.2', 'F33A8.4', 'K08E4.1', 'Y37E3.9', 'Y59A8B.1', 'AC3.2', 'C55A6.10', 'AC3.7', 'C36B7.6',  <...> .4', 'ZK970.2', 'Y75B8A.30', 'Y77E11A.11', 'ZK892.4', 'ZK328.1', 'ZK783.4', 'ZC434.4', 'ZK721.2']\n",
+      "\u001b[0;31mLength:\u001b[0m      2989\n",
+      "\u001b[0;31mFile:\u001b[0m        /opt/homebrew/anaconda3/envs/mgma/lib/python3.10/site-packages/networkx/classes/reportviews.py\n",
+      "\u001b[0;31mDocstring:\u001b[0m  \n",
+      "A NodeView class to act as G.nodes for a NetworkX Graph\n",
+      "\n",
+      "Set operations act on the nodes without considering data.\n",
+      "Iteration is over nodes. Node data can be looked up like a dict.\n",
+      "Use NodeDataView to iterate over node data or to specify a data\n",
+      "attribute for lookup. NodeDataView is created by calling the NodeView.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "graph : NetworkX graph-like class\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> G = nx.path_graph(3)\n",
+      ">>> NV = G.nodes()\n",
+      ">>> 2 in NV\n",
+      "True\n",
+      ">>> for n in NV:\n",
+      "...     print(n)\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      ">>> assert NV & {1, 2, 3} == {1, 2}\n",
+      "\n",
+      ">>> G.add_node(2, color=\"blue\")\n",
+      ">>> NV[2]\n",
+      "{'color': 'blue'}\n",
+      ">>> G.add_node(8, color=\"red\")\n",
+      ">>> NDV = G.nodes(data=True)\n",
+      ">>> (2, NV[2]) in NDV\n",
+      "True\n",
+      ">>> for n, dd in NDV:\n",
+      "...     print((n, dd.get(\"color\", \"aqua\")))\n",
+      "(0, 'aqua')\n",
+      "(1, 'aqua')\n",
+      "(2, 'blue')\n",
+      "(8, 'red')\n",
+      ">>> NDV[2] == NV[2]\n",
+      "True\n",
+      "\n",
+      ">>> NVdata = G.nodes(data=\"color\", default=\"aqua\")\n",
+      ">>> (2, NVdata[2]) in NVdata\n",
+      "True\n",
+      ">>> for n, dd in NVdata:\n",
+      "...     print((n, dd))\n",
+      "(0, 'aqua')\n",
+      "(1, 'aqua')\n",
+      "(2, 'blue')\n",
+      "(8, 'red')\n",
+      ">>> NVdata[2] == NV[2]  # NVdata gets 'color', NV gets datadict\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph_fly.nodes?"
    ]
   },
   {
@@ -228,7 +308,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
   "vscode": {
