--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -75,6 +75,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "0f988af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "di_graph = graph_fly.to_directed()\n",
+    "di_graph.number_of_nodes()\n",
+    "di_graph.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a28c2d75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "di_graph1 = nx.DiGraph()\n",
+    "di_graph1.add_edges_from(graph_fly.edges())\n",
+    "di_graph1.number_of_nodes()\n",
+    "di_graph1.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "3e57346c",
    "metadata": {},
